implemented algo. TODO: metrics, make it work

--- a/hw2_rogachev.ipynb
+++ b/hw2_rogachev.ipynb
@@ -363,6 +363,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "labels = np.empty(4999, dtype=int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "l = np.linspace(1, 4999, num = 4999) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4999,)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "labels = np.empty(4999, dtype=int)\n",
+    "labels.fill(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4999,)"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -389,37 +467,40 @@
     "        \"\"\"\n",
     "        Инициализация метода\n",
     "        :k - количество кластеров (по умолчанию 3 кластерa)\n",
-    "        :linkage - выбор метрики расстояния между кластерами\n",
+    "        :linkage - выбор метрики между кластерами\n",
     "        поддерживается выбор single, complete, average (по умолчанию single)\n",
     "        \"\"\"\n",
     "        self.k = kwargs.get('k',3)\n",
     "        self.linkage = kwargs.get('linkage','single')\n",
+    "       \n",
     "        return\n",
     "        \n",
     "    def fit(self, x, y=None):\n",
     "        \"\"\"\n",
     "        Use data matrix x to compute model parameters\n",
     "        \"\"\"\n",
-    "        self.x_len = len(x)\n",
+    "        self.x_len = len(x) #иниц-ровали кол-во кластеров - переменная имеет смысл текущего количества кластеров\n",
+    "        self.labels = np.linspace(1, self.x_len, num = self.x_len) #сказали, что каждый объект это кластер\n",
+    "        if self.linkage == 'single':\n",
+    "            metric = self._single\n",
+    "        if self.linkage == 'average':\n",
+    "            metric = self._average \n",
+    "        if self.linkage == 'complete':\n",
+    "            metric = self._complete    \n",
     "        \n",
-    "    \n",
-    "        1. function agglomerative(X, K):\n",
-    "        2.    initialize N # number of objects\n",
-    "        3.    initialize C = N # number of clusters\n",
-    "        4.    initialize C_i = x_i # initial clusters\n",
-    "        5.    while C > K:\n",
-    "        6.        C_a = C_b = None # closest clusters\n",
-    "        7.        min_dist = +inf # distance between closest\n",
-    "        8.        for i in 1 .. C:\n",
-    "        9.            for j in i + 1 .. C:\n",
-    "        10.                dist = d(C_i, C_j) # dist. betw. clusters\n",
-    "        11.                if dist < min_dist:\n",
-    "        12.                    min_dist = dist\n",
-    "        13.                    C_a = C_i\n",
-    "        14.                    C_b = C_j        \n",
-    "        15.        merge(C_a, C_b)\n",
-    "        16.        C = C - 1    \n",
-    "        17.    return C_1, ..., C_K\n",
+    "        while self.x_len > self.k:\n",
+    "    6.        C_a = C_b = None # closest clusters\n",
+    "    7.        min_dist = +inf # distance between closest\n",
+    "    8.        for i in 1 .. self.x_len:\n",
+    "    9.            for j in i + 1 .. self.x_len:\n",
+    "    10.                dist = metric(x: x_c == i, C_j) # dist. betw. clusters\n",
+    "    11.                if dist < min_dist:\n",
+    "    12.                    min_dist = dist\n",
+    "    13.                    C_a = C_i\n",
+    "    14.                    C_b = C_j        \n",
+    "    15.        merge(C_a, C_b)\n",
+    "    16.        self.x_len = self.x_len - 1    \n",
+    "    17.    return C_1, ..., C_K\n",
     "    \n",
     "        return self\n",
     "    \n",
@@ -432,7 +513,39 @@
     "    \n",
     "    def fit_predict(self, x, y=None):\n",
     "        self.fit(x, y)\n",
-    "        return self.predict(x)"
+    "        return self.predict(x)\n",
+    "        \n",
+    "    def _single(a, b): #на входе два центроида. Как их выделять? Групбай?\n",
+    "        \n",
+    "        return np.linalg.norm(a-b)\n",
+    "        \n",
+    "    def _complete(a, b):\n",
+    "        return np.linalg.norm(a-b)\n",
+    "\n",
+    "    def _average(a, b):\n",
+    "        return np.linalg.norm(a-b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Пересчет расстояний после объединения кластеров\n",
+    "\n",
+    "* Single linkage\n",
+    "$$ d_{min}(C_i, C_j) = \\min_{\\mathbf{x} \\in C_i, \\mathbf{x}' \\in C_j} \\|\\mathbf{x} -\\mathbf{x}' \\| $$\n",
+    "\n",
+    "* Complete linkage\n",
+    "$$ d_{max}(C_i, C_j) = \\max_{\\mathbf{x} \\in C_i, \\mathbf{x}' \\in C_j} \\|\\mathbf{x} -\\mathbf{x}' \\| $$\n",
+    "\n",
+    "* Average linkage\n",
+    "$$ d_{avg}(C_i, C_j) = \\frac{1}{n_i n_j}\\sum_{\\mathbf{x} \\in C_i}\\sum_{\\mathbf{x}' \\in C_j} \\|\\mathbf{x} -\\mathbf{x}' \\| $$\n",
+    "\n",
+    "* Centroid linkage\n",
+    "$$ d_{cent}(C_i, C_j) = \\|\\mu_i -\\mu_j \\| $$\n",
+    "\n",
+    "* Ward linkage\n",
+    "$$ d_{ward}(C_i, C_j) = \\sqrt{\\frac{n_i n_j}{n_i + n_j}} \\|\\mu_i - \\mu_j \\|$$\n"
    ]
   },
   {
