boolean indexing+inf TODO: merge, metrics

--- a/hw2_rogachev.ipynb
+++ b/hw2_rogachev.ipynb
@@ -481,26 +481,28 @@
     "        \"\"\"\n",
     "        self.x_len = len(x) #иниц-ровали кол-во кластеров - переменная имеет смысл текущего количества кластеров\n",
     "        self.labels = np.linspace(1, self.x_len, num = self.x_len) #сказали, что каждый объект это кластер\n",
-    "        if self.linkage == 'single':\n",
+    "        if self.linkage == 'single':  #выбрали нужную метрику. по умолчанию должен быть сингл линкэйдж\n",
     "            metric = self._single\n",
     "        if self.linkage == 'average':\n",
     "            metric = self._average \n",
     "        if self.linkage == 'complete':\n",
     "            metric = self._complete    \n",
-    "        \n",
+    "            \n",
     "        while self.x_len > self.k:\n",
-    "    6.        C_a = C_b = None # closest clusters\n",
-    "    7.        min_dist = +inf # distance between closest\n",
-    "    8.        for i in 1 .. self.x_len:\n",
-    "    9.            for j in i + 1 .. self.x_len:\n",
-    "    10.                dist = metric(x: x_c == i, C_j) # dist. betw. clusters\n",
-    "    11.                if dist < min_dist:\n",
-    "    12.                    min_dist = dist\n",
-    "    13.                    C_a = C_i\n",
-    "    14.                    C_b = C_j        \n",
-    "    15.        merge(C_a, C_b)\n",
-    "    16.        self.x_len = self.x_len - 1    \n",
-    "    17.    return C_1, ..., C_K\n",
+    "            C_a = C_b = None # closest clusters\n",
+    "            min_dist = float('inf') # distance between closest\n",
+    "            for i in 1 .. self.x_len:\n",
+    "                for j in i + 1 .. self.x_len:\n",
+    "                    mask_i = (self.labels == i)\n",
+    "                    mask_j = (self.labels == j)\n",
+    "                    dist = metric(x[mask_i], x[mask_j]) # dist. betw. clusters\n",
+    "                    if dist < min_dist:\n",
+    "                        min_dist = dist\n",
+    "                        C_a = C_i\n",
+    "                        C_b = C_j        \n",
+    "            merge(C_a, C_b)  #тут нужно имплементировать замену индексов. мб по той же маске?\n",
+    "            self.x_len = self.x_len - 1    \n",
+    "        return C_1, ..., C_K\n",
     "    \n",
     "        return self\n",
     "    \n",
